# DiffEq

./: HW.aux  RK4.cpp  a.out  info.txt
CH5AND12PROJECTS13/: beamer.fdb_latexmk  beamer.fls  beamer.toc
WK4_Q1_P1/Quarterly_1/: EXAM.aux  EXAM.fdb_latexmk  EXAM.fls  EXAM.tex  style.sty
WK4_Q1_P1/project/: beamer.aux  beamer.fdb_latexmk  beamer.fls  beamer.nav  beamer.out  beamer.tex  beamer.toc
WK8/: HW.aux  HW.fdb_latexmk  HW.fls  HW.tex
WK9/: HW.aux  HW.fdb_latexmk  HW.fls  HW.tex
Wk1/homework/: HW.aux  HW.fdb_latexmk  HW.fls  HW.tex  sty.sty
Wk10_MT_P2/midterm'/: midterm.aux  midterm.fdb_latexmk  midterm.fls  midterm.tex  style.sty
Wk10_MT_P2/project/: a.tex  beamer.aux  beamer.fdb_latexmk  beamer.fls  beamer.nav  beamer.out  beamer.tex  beamer.toc
Wk11/: HW.aux  HW.fdb_latexmk  HW.fls  HW.tex
Wk12/: HW.aux  HW.fdb_latexmk  HW.fls  HW.tex  gstyle.sty
Wk13_Ch5_12_Projects/: beamer.aux  beamer.nav  beamer.out  beamer.tex
Wk14/: HW.aux  HW.fdb_latexmk  HW.fls  HW.tex
Wk2/homework/: 1aII.asy  HW-1.asy  HW.aux  HW.fdb_latexmk  HW.fls  HW.tex  Style.sty
Wk3/homework/: HW.aux  HW.fdb_latexmk  HW.fls  HW.tex  gstyle.sty
Wk5/HW/: HW.aux  HW.fdb_latexmk  HW.fls  HW.tex
Wk6/euler-improver/: Improved-Euler.cpp
Wk6/homework/: 2d-1.cpp  CMakeLists.txt  HW.aux  HW.fdb_latexmk  HW.fls  HW.tex  RK4.cpp  RKout.txt  RUN.txt  cos-test.cpp  euler.cpp  improved-euler.cpp  main  out  out_tracking
Wk6/homework/tests/: CMakeLists.txt
Wk7/homework/: HW.aux  HW.fdb_latexmk  HW.fls  HW.tex  pdflatex126764.fls
(+1 files in other folders)
